*Empty MediaWiki Message*

--- a/Warsjau.mw
+++ b/Warsjau.mw
@@ -1,7 +1,7 @@
 [[Bestaand:Warszawa Mapa.png|thumb|De ligging van Warsjau op de Poolse kaarte]]
 [[Bestaand:Warsaw_-_Royal_Castle_Square.jpg|thumb|t Sloterplein in Warsjau]]
 [[Bestaand:2007-06-27_Pałac_Branickich_w_Warszawie.jpg|thumb|In t Branicki Paleis, in [[rokoko]]-stiel, is t stadsbestuur ehuusvest]]
-'''Warsjau''' ([[Pools]]: ''Warszawa'' {{IPA|[varˈʃava]}}) is de [[heufdstad]] en mit 1.732.707 inwoners (september 2014) de grootste stad van [[Pooln|Polen]]. De stad ligt in t historiese landsdeel [[Mazovië]] an de [[Wiesel]] (''Wisła''), waorbie t sentrum op de linkeroever ligt en t stadsdeel [[Praga]] op de rechter. De agglomerasie had in [[2005]] zo'n 2.879.000 inwoners en is nao die van [[Kattewiets]] de grootste van t land. t Is ok de heufdstad van t [[woiwodschap]] [[Mazovië]].
+'''Warsjau''' ([[Pools]]: ''Warszawa'' [varˈʂava]) is de [[heufdstad]] en mit 1.732.707 inwoners (september 2014) de grootste stad van [[Pooln|Polen]]. De stad ligt in t historiese landsdeel [[Mazovië]] an de [[Wiesel]] (''Wisła''), waorbie t sentrum op de linkeroever ligt en t stadsdeel [[Praga]] op de rechter. De agglomerasie had in [[2005]] zo'n 2.879.000 inwoners en is nao die van [[Kattewiets]] de grootste van t land. t Is ok de heufdstad van t [[woiwodschap]] [[Mazovië]].
 
 == Geschiedenisse ==
 Warsjau beheurt niet tot de oldste staeden van Polen: de eerste vermelding stamt uut [[1241]]. In t begin was t de heufdstad van t vorstendom Mazovië, mar in [[1596]] verplaatsten de Poolse konik zien verbliefplaatse van [[Krakau]] naor t sentralere Warsjau. 
