--- a/Connecticut.mw
+++ b/Connecticut.mw
@@ -1,10 +1,7 @@
 {{Zie dv|Sy [[Connecticut (duurverwiesziede)]] vöär andere beteykenissen van Connecticut.}}
 {{Amerikaanse staot
 | naam = State of Connecticut
-| biejnoam = ''The Constitution State''
-* ''The Nutmeg State''
-* ''The Provisions State''
-* ''The Land of Steady Habits''
+| biejnoam = ''The Constitution State<br>The Nutmeg State<br>The Provisions State<br>The Land of Steady Habits''
 | vlagge = [[Bestaand:Flag of Connecticut.svg|125x100px|Vlagge van Connecticut]]
 | wapen = [[Bestaand:Seal of Connecticut.svg|75x100px|Wåpen van Connecticut]]
 | kaorte = Map of USA CT.svg
