--- a/Nysassiske_Skryvwyse.mw
+++ b/Nysassiske_Skryvwyse.mw
@@ -135,7 +135,7 @@ By de konsonanten wyset sik alleyn minimale vorskealen up dat foneemlevel twüsk
 |-
 !Grafeem || Geit torügge <br>up oldsassisk || Eksempels: || Oldsassisk || Öäverregionale <br> Nysassiske Skryvwyse || SASS <br>(DE-noordsassisk)|| Grünnegsk <br>(NL-noordsassisk) || Mönsterlandsk <br>(DE-westföälsk)|| Standaard Schriefwieze <br> (twentsk, NL-westföälsk) || Nedderl. <br>kognaten || Düütske <br>kognaten
 |-
-| m || m || || '''m'''iluk <br>ku'''m'''an <br> <br>ar'''m''' || '''m'''elk <br>koa'''m'''en, ku'''mm'''en <br> westföälsk ouk: kua'''m'''en <br>a'''rm || '''M'''elk <br>ka'''m'''en <br> <br> Ar'''m''' || '''m'''elk <br>ko'''m'''en, ko'''mm'''en <br> <br>aar'''m''' || '''M'''iälk, '''M'''elk <br>kuë'''m'''en <br> <br>Ar'''m''' || '''m'''elk <br>ko'''m'''n <br> <br>aar'''m''' || melk <br>komen <br> <br>arm || Milch <br>kommen <br> <br>Arm
+| m || m || || '''m'''iluk <br>ku'''m'''an <br> <br>ar'''m''' || '''m'''elk <br>koa'''m'''en, ku'''mm'''en <br> westföälsk ouk: kua'''m'''en <br>a'''rm''' || '''M'''elk <br>ka'''m'''en <br> <br> Ar'''m''' || '''m'''elk <br>ko'''m'''en, ko'''mm'''en <br> <br>aar'''m''' || '''M'''iälk, '''M'''elk <br>kuë'''m'''en <br> <br>Ar'''m''' || '''m'''elk <br>ko'''m'''n <br> <br>aar'''m''' || melk <br>komen <br> <br>arm || Milch <br>kommen <br> <br>Arm
 |-
 | n || n + hn || || '''hn'''ut <br> <br>'''n'''aht <br>wi'''nn'''a'''n''' <br>hlōpa'''n''' || '''n'''ut, '''n'''oat, '''n'''öät(e) <br>westföälsk ouk: nuat <br>'''n'''acht <br>wi'''nn'''e'''n''' <br>loupe'''n''' || '''N'''utt, '''N'''ööt <br> <br>'''N'''acht <br>wi'''nn'''e'''n''' <br>lope'''n''' || '''n'''eut <br> <br> '''n'''acht <br>wi'''nn'''e'''n''' <br>lope'''n''' || '''N'''uët <br> <br>'''N'''acht <br>wi'''nn'''e'''n''' <br>laupe'''n''' || '''n'''ot, '''n'''oot<br> <br>'''n'''acht <br>wi'''nn''' <br>loop'''n''' || noot <br> <br>nacht <br>winnen <br>lopen || Nuss <br> <br>Nacht <br>gewinnen <br>laufen  
 |-
@@ -277,7 +277,7 @@ In de noordsassisken dialekten wardt vandage neyn vorskeal meyr maked twüsken o
 |-
 !Grafeem || Geit torügge <br>up oldsassisk || Proto-Germaansk || Oldsassisk || Öäverregionale <br> Nysassiske Skryvwyse || SASS <br>(DE-noordsassisk)|| Grünnegsk <br>(NL-noordsassisk) || Mönsterlandsk <br>(DE-westföälsk)|| Standaard Schriefwieze <br> (twentsk, NL-westföälsk) || Nedderl. <br>kognaten || Düütske <br>kognaten
 |-
-| a || a || '''a'''xtōu <br>l'''anđan || '''a'''hto <br>l'''a'''nd || '''a'''cht <br>l'''a'''nd || '''a'''cht <br>L'''a'''nd || '''a'''cht <br>l'''aa'''nd || '''a'''cht <br>L'''a'''nd || '''a'''cht <br>l'''aa'''nd || acht <br>land || acht <br>Land 
+| a || a || '''a'''xtōu <br>l'''anđan''' || '''a'''hto <br>l'''a'''nd || '''a'''cht <br>l'''a'''nd || '''a'''cht <br>L'''a'''nd || '''a'''cht <br>l'''aa'''nd || '''a'''cht <br>L'''a'''nd || '''a'''cht <br>l'''aa'''nd || acht <br>land || acht <br>Land 
 |-
 | ä || ümluud van a || l'''a'''nʒiþō || || l'''ä'''ngde || L'''ä'''ngde || || L'''ä'''ngte || l'''ea'''ngte || lengte || Länge 
 |-
