--- a/Nedersaksische_warkwoordsvörms.mw
+++ b/Nedersaksische_warkwoordsvörms.mw
@@ -82,7 +82,7 @@ Ie wordt verzöcht um t understaonde schema an te holden. Ie kunt underan t sche
 | Eulie
 |}
 
-<nowiki>*</nowiki> [[Veluws]]: "hee" en "ie" is veural Oost-Veluws <div>
+<nowiki>*</nowiki> [[Veluws]]: "hee" en "ie" is veural Oost-Veluws<br>
 <nowiki>**</nowiki> [[Veluws]]: zie de [[Veluwse taalwiezer]] veur 't hele overzichte van ''wie'' en ''julen''.
 
 ==Hebben==
