--- a/Noord-Braobant.mw
+++ b/Noord-Braobant.mw
@@ -1,50 +1,49 @@
-{{Proveensietabel |
-naam = Previnsie Noord-Braobant |
-vlaggeofbeeldn =[[Bestaand:North Brabant-Flag.svg|130px|Proveensievlagge]]|
-woapnofbeeldn=[[Bestaand:Noord-Brabant wapen.svg|130px|Proveensiewoapn]]|
-kortweg = Braobaant |
-heufdstad = [['s-Hertogenbosch (stad)|Den Bosch]] |
-religiejoar = 2005 |
-breedtegroad = 51/33/42/N |
-lengtegroad  = 5/11/17/E |
-region = NL-NB |
-Religie = [[Protestantisme|Protestants]] 6%<br />[[Katholicisme|Katholiek]] 57%<br />[[Islam|Moslim]] 4,5% |
-öpp = 5.081,76 |
-wateröpp = 165,27 |
-öpprange = 4.916,49 |
-inwonners = 2.563.432 |
-doatum = jan 2020 |
-bevolkingsdichtheid = 521 |
-volksleed = gien |
-ofbeeldn =  Noord Brabant-Position.png |
-Webstea = [http://www.brabant.nl www.brabant.nl] |
+{{Proveensietabel
+| naam = Previnsie Noord-Braobant
+| vlaggeofbeeldn =[[Bestaand:North Brabant-Flag.svg|130px|Proveensievlagge]]
+| woapnofbeeldn=[[Bestaand:Noord-Brabant wapen.svg|130px|Proveensiewoapn]]
+| kortweg = Braobaant
+| heufdstad = [['s-Hertogenbosch (stad)|Den Bosch]]
+| religiejoar = 2005
+| breedtegroad = 51/33/42/N
+| lengtegroad  = 5/11/17/E
+| region = NL-NB
+| Religie = [[Protestantisme|Protestants]] 6%<br />[[Katholicisme|Katholiek]] 57%<br />[[Islam|Moslim]] 4,5%
+| öpp = 5.081,76
+| wateröpp = 165,27
+| öpprange = 4.916,49
+| inwonners = 2.563.432
+| doatum = jan 2020
+| bevolkingsdichtheid = 521
+| volksleed = gien
+| ofbeeldn =  Noord Brabant-Position.png
+| Webstea = [http://www.brabant.nl/ www.brabant.nl]
 }}
 [[Bestaand:Prov-Noord-Brabant-OpenTopo.jpg|thumb|Noord-Braobant]]
 
 '''Noord-Braobant''' ([[Nederlaands|Nederlands]]: ''Noord-Brabant'', [[Braobaans|Braobants]]: ''Noord-Braobant'') is ne provinsie in t zuden van [[Nederlaand|Nederland]]. t Grenst an de Nederlandse provinsies [[Limburg (Nederlaand)|Limburg]], [[Gelderlaand|Gelderland]], [[Zuud-Hollaand|Zuud-Holland]] en [[Zeelaand|Zeeland]] en an de [[België|Belgiese]] provinsies [[Antwaarp (provinzie)|Antwarpen]] en [[Limburg (België)|Limburg]]. Noord-Braobant hef 2,5 miljoon inwoners.
 
 == Gemeenten ==
-
 {|
 |
 # [[Alphen-Chaam]]
 # [[Altena]]
 # [[Asten]]
 # [[Baarle-Nassau]]
-# [[Bargeijk]] (''Bergeijk'')
+# [[Bargeyk]] (''Bergeijk'')
 # [[Bargen op Zoom]] (''Bergen op Zoom'')
 # [[Bernheze]]
 # [[Best]]
 # [[Bladel]]
-# [[Boekel (Noord-Braobant)|Boekel]]
+# [[Bukel (gemeynde)|Bukel]] (''Boekel'')
 # [[Boxmeer]]
 # [[Boxtel]]
 # [[Breda]]
 # [[Cranendonck]]
 # [[Cuijk]]
 # [[Deurne]]
-# [[Dongen]]
-# [[Drimmelen]]
+# [[Dongen (gemeynde)|Dongen]]
+# [[Drimmelen (gemeynde)|Drimmelen]]
 # [[Eersel]]
 # [[Eindhoown|Eindhoven]]
 # [[Etten-Leur]]
@@ -52,30 +51,30 @@ Webstea = [http://www.brabant.nl www.brabant.nl] |
 <li> [[Geertrudenbarg]] (''Geertruidenberg'')
 <li> [[Geldrop-Mierlo]]
 <li> [[Gemert-Bakel]]
-<li> [[Gilze-Rijen]]
-<li> [[Goorle]]
-<li> [[Grave]]
+<li> [[Gilze en Rijen]]
+<li> [[Goirle (gemeynde)|Goirle]]
+<li> [[Grave (gemeynde)|Grave]]
 <li> [[Halderbarge]]
 <li> [[Heeze-Leende]]
 <li> [[Helmond]]
 <li> [['s-Hertogenbosch (gemeente)|'s-Hertogenbosch]]
 <li> [[Heusden]]
-<li> [[Hilvaorenbeek]] (''Hilvarenbeek'')
-<li> [[Laanderd]] (''Landerd'')
-<li> [[Laorbeek]] (''Laarbeek'')
-<li> [[Loon op Zaand]]
+<li> [[Hilvarenbeek]]
+<li> [[Landerd]]
+<li> [[Laarbeek (gemeynde)|Laarbeek]]
+<li> [[Loon op Zand]]
 <li> [[Meierijstad]]
 <li> [[Mill en Sint Hubert]]
-<li> [[Moerdiek]] (''Moerdijk'')
+<li> [[Moerdijk]]
 <li> [[Nuenen, Gerwen en Nederwetten]]
-<li> [[Oorschot]] (''Oirschot'')
+<li> [[Oirschot]]</ol>
 |<ol start="43">
-<li> [[Oosterholt]] (''Oosterhout'')
-<li> [[Oosterwiek (Noord-Braobant)|Oosterwiek]] (''Oisterwijk'')
+<li> [[Oosterhout (Noordbråbant)|Oosterhout]]
+<li> [[Oisterwiek]]
 <li> [[Oss]]
 <li> [[Reusel-De Mierden]]
 <li> [[Roosendaal]]
-<li> [[Rucphen]]
+<li> [[Rucphen (gemeynde)|Rucphen]]
 <li> [[Sint Anthonis]]
 <li> [[Sint-Michielsgestel]]
 <li> [[Someren]]
@@ -83,13 +82,13 @@ Webstea = [http://www.brabant.nl www.brabant.nl] |
 <li> [[Steenbargen]] (''Steenbergen'')
 <li> [[Tilburg]]
 <li> [[Uden]]
-<li> [[Valkensweerd]] (''Valkenswaard'')
+<li> [[Valkenswaard (gemeynde)|Valkenswaard]]
 <li> [[Veldhoven]]
 <li> [[Vught]]
 <li> [[Waalre]]
-<li> [[Waolwiek]]/[[Waolek]] (''Waalwijk'')
+<li> [[Waalwijk (gemeynde)|Waalwijk]]
 <li> [[Woonsdrecht]] (''Woensdrecht'')
-<li> [[Zundert]]
+<li> [[Zundert]]</ol>
 |}
 
 == Nedersaksies ==
