--- a/Götstien.mw
+++ b/Götstien.mw
@@ -8,7 +8,7 @@ In [[Vlaanderen]] nuumt ze de götstien ook wel pompbak, in Limburg pómpestein.
 == Nedersaksisch ==
 *[[Achterhoeks]]: 
 *[[Drèents]]:
-** ''geutstien
+** ''geutstien''
 *[[Grunnegs]]:
 *[[Sallands]]: 
 ** ''götstien''
