Achterstallig onderhold - medeyne NSS der oaver

--- a/Biseksualiteit.mw
+++ b/Biseksualiteit.mw
@@ -1,34 +1,29 @@
-[[Bestaand:Sexual scene on pompeian mural 2.jpg|thumb|Biseksualiteit]]
-[[Bestaand:The_bisexual_pride_flag_(3673713584).jpg|thumb|right|Vlagge dee veur de biseskualiteit steet.]]
-[[Bestaand:Japanesepederasty18thcentury.jpg|thumb|right|Ne Japonse ofbeeldige van twea männe en ne vraaw dee [[seks]] hebt.]]
-'''Biseksualiteit''' is nen oard [[seksuele gerichtheaid]] woarbiej nen persoon zoo wal noar [[man (geslacht)|männe]] as [[vraauw|vraawleu]] kik, emosjoneal en/öf seksueel. t Is met [[heteroseksualiteait|heteroseksualiteit]] en [[homoseksualiteait|homoseksualiteit]] een van de dree heufdvörmn van seksuele veurkeur. Biseksualiteit is nich healmoal t zölfde as [[panseksualiteait|panseksualiteit]]. Biej panseksualiteit maakt t namelik niks uut töt welke [[geslachtsidentiteait|geslachtsidentiteit]] iemaand heurt. Bie biseskualiteit is n persoon in t geheel richt öp männe en vraawleu alleen. Ok mensken dee nich healmoal zoo drök doot oawer öarn seksuelen oard könt zikzölf as biseksueel kenmarkn. Mensken dee heelmoal niks veult bie gin eankel geslacht zeent [[aseksueel]].
+[[Bestand:Sexual scene on pompeian mural 2.jpg|thumb|Biseksualiteit]]
+[[Bestand:The_bisexual_pride_flag_(3673713584).jpg|thumb|right|Vlagge dee vöär de biseskualiteit steyt.]]
+[[Bestand:Japanesepederasty18thcentury.jpg|thumb|right|Ne Japanse ofbeelding van twea männe en ne vraaw dee [[seks]] hebbet.]]
+'''Biseksualiteit''' is ne ård [[seksuele gerichtheid]] wårby nen persoon beide når [[man (geslacht)|männe]] en [[vraauw|vrouwlüde]] kik, emotioneel en/of seksueel. Et is med [[heteroseksualiteit|heteroseksualiteit]] en [[homoseksualiteit|homoseksualiteit]] eyne van de dree höyvdförme van seksuele vöärköär. Biseksualiteit is nich heylemål etsölvde as [[panseksualiteit|panseksualiteit]]. By panseksualiteit maakt et ja niks uut by wat vöär [[geslachtsidentiteit|geslachtsidentiteit]] eyne sik by reakent. By biseskualiteit is en persoon in et geheyl richt up männe en vrouwlüde alleen. Ouk mensken dee nich heylemål sou drök doot oaver öaren seksuelen ård künnet siksölv as biseksueel kenmarken. Mensken dee as heylemål niks vöölt by gin enkel geslacht sint [[aseksueel]].
 
-Biseskualiteit keump veur oawer de heale wearld in verskilnde kultuurn, en ok bie deers kö'j t trögveendn.t Hef dr aait al west. n Term ''biseksualiteit'' kömn saamn met de termn ''heteroseksualiteit'' en ''homoseksualiteit'' pas in t 19en joarhönnerd in de [[laandn woar t Engels ne offisjeale sproake is|Engelssprekkende laandn]] in t gebroek, en pas eargns half in t 20en joarhönnerd in [[Neerlaand]].
+Biseksualiteit kümt vöär oaver de heyle wearld in verskillende kulturen, en ouk by deers kün y et antreffen. Et hevt der aait al weasd. De term ''biseksualiteit'' köm net as de termen ''heteroseksualiteit'' en ''homoseksualiteit'' pas in et 19. jårhunderd in engelsk-sprekkende landen in gebruuk, en pas argens halv in et 20. jårhunderd in [[Neaderland]].
 
-== Ömskriewige ==
-=== Seksuele gerichtheaid, identiteit, gedrag ===
-A'j biseskueel bint, dan kö'j leefdesgeveulns en seksuele geveulns hebn veur beaide geslachtn, man en vrouw. t Is dus nich zo det mensken alleen moar op männe of allean moar op vrouwleu valt, moar det dr ok nog n gebeed tuskenin is, woarbiej dr verskilnde groadn zeent woarin iemaand körter biej homoseksualiteit of körter biej heteroseksualiteit steet. Vearder kan t ok zo wean de'j oe wal seksueel antrökn veult op t zölfde geslacht, moar de'j oewe identiteit toch op heteroseksueel hooldt. Ok könt mensken homoseksuele ervoarigen hebn, moar zikzölf nich as homeseksueel of biseksueel zeen. Ok kan t zo wean det nen homoseksueel seks hef met iemaand van t oandre geslacht moar zikzölf nich as biseksueel zut.
+== Umskryving ==
+=== Seksuele gerichtheid, identiteit, gedrag ===
+Biseksuelen künnet leevdesgevölens en seksuele gevölens hebben vöär beide geslachten, man en vrouwe. Mensken vallet düs nich enkel up männe of vrouwlüde; der is ouk noch en gebeed tüskenin. Dårbinnen sint verskillende gråden wårin eyne körter by homoseksualiteit of körter by heteroseksualiteit steyt. Wyder kan et ouk sou weasen dat eyne sik wal seksueel antrökken vöölt up et sölvde geslacht, mår syne identiteit toch up heteroseksueel höldt. Ouk künnet lüde homoseksuele ervåringen hebben, mår siksölv nich as homeseksueel of biseksueel seen. Ouk kan et sou weasen dat nen homoseksueel seks hevt med eyne van et andere geslacht mår siksölv nich as biseksueel süt.
+=== Meaningen oaver et bestån der van ===
+Net sou as andere "råre" seksualiteiten kan biseksualiteit diskrimineerd wörden, al kümt dat in [[Verienigde Staoten van Amerika|Amerika]] vaker vöär as in [[Neaderland]]. Der sint årdig wat lüde dee meynet dat et [[bifobie|verskynsel biseksualiteit nich besteyt]]. dat idee kümt van de gedachte dat lüde enkel mår op lüde van et andere geslacht [[verleevdheid|verleevd]] künnet worden, of dat der alleane heteroseksualiteit en homoseksualiteit besteyt, mår nich wat der tüskenin. Dee lüde meynet dat en term biseksualiteit gebruukt wörd döär biseksuelen as vöärwendsel üm homoseksualiteit te verbergen, döär heteroseksuelen dee seks med et sölvde geslacht uutproberen willet, of dat eyne alleane biseksueel is as den sik töt beide geslachten in deselvde måte antrökken vöölt.
 
-=== Meanigen oawer t bestoan dr van ===
-Net zoo as oandre "roare" seksualiteitn kan biseksualiteit diskrimineerd wördn, ok al kömp det in [[Verienigde Staoten van Amerika|Amerika]] vaker veur as in [[Neerlaand]]. Dr zeent oardig wat mensken dee veendt det t [[bifobie|verskiensel biseksualiteit nich besteet]]. Det idea keump van de gedachte det mensken alleen moar op mensken van t oandre geslacht [[verliefdheaid|verleefd]] könt wordn, of det dr alleen heteroseksualiteit en homoseksualiteit besteet, moar nich wat dr tusken in. Dee leu meant det n term biseksualiteit gebruukt wörd deur biseksueeln as vuurweandsel um homoseksualiteat te verbeargen, deur heteroseksueeln dee seks met t zölfde geslacht uutprobeern wilt, of de'j alleen biseksueel bint a'j oe töt beaide geslachtn in dezelfde moate antrökn voolt.
+Oaver de tyd hebbet meyrdere weatenskappers de gedachte der achterhen dån dat eyne alleane biseskueel is as den sik antrökken vöölt töt  beide geslachten. See hebbet låtn seen dat biseksuåliteit ouk ne aparte gerichtheid is. Der was ouk en undersöök dat seade dat y alleanig biseksueel bint as y u romantisk of seksueel antrökken vöölt når beide et andere as et eygene geslacht, mår den uutkümst is later weader intrökken.
 
-Oawer de tied hebt meardere wetnskoppers de gedachte de'j alleen biseskueel bint a'j oe töt beaide geslachtn eawnvöl antrökn voolt dr achterhen doan. Zee hebt loatn zeen det biseksuoaliteit ok ne amparte gerichtheaid is. Dr was ok n önnerzook det zea de'j alleen biseksueel bint a'j oe romaanties of seksueel antrökn voolt op zoowal t oandre as t eigne geslacht, moar den uutkömst is later terugge trökn.
+In 1995 bleak uut en undersöök dat de meyrderheid van de lüde biseksueel solde weasen "as et algemeyne beald nich förmd worden solde döär underdrükking, gelöyv, afkeyr, untkenning, loiheid, verleagenheid, te weinig kansen, te weinig verbealding, of en leaven wårin as y alleane mår seksuele ervåring med eyne persoon of eyn geslacht hebbet."
 
-In 1995 was dr n önnerzook det zea det de meerderheaid van de mensken biseksueel zol wean "as önnerdrökking, geleuf, ofkear, ontkenning, luiheaid, verleagnheaid, te weainig kaansn, te weainig verbeelding, of n leawn woarin iej alleen moar seksuele ervoaring met een persoon of een geslacht hebt had, nich t algemene beeld vörmen zoln".
+=== Kinseys skåle ===
+[[Kinseys skåle]] probeert seksuele interesses en verleaden üm te setten in en cyfer dat angevt in wat vöär seksuele richting eyne sik bevindet. Et vangt an med 0, wat steyt vöär alleane heteroseksueel, töt 6, wat steyt vöär alleane homoseksueel.
 
-=== Kinseys skoale ===
-[[Kinseys skoale]] probeart iemaands seksuele interesses en skiednisse öm te zetn op in welke richtige iejmaand seksueel an geet. t Vangt an met 0, wat steet veur alleen heteroseksueel, töt 6, wat steet veur alleen homoseksueel.
+== Vöärkummen ==
+Eyn undersöök van et Landelik Netwark Biseksualiteit (2007) by 50.000 lüde hevt låten seen dat der verskillen sint tüsken biseksueel gedrag en biseksuele identiteit. Van de heteroseksuele männe seade 5,5% an biseksueel gedrag te doon, van de homoseksuele männe was dat 7,5%. By de vrouwlüde was dat van de heteroseksuelen 5,2%, en van de homoseksuelen 13,5%. Mår ümdat Neaderland völle meyr inwoaners hevt as dat, is te seggen dat et best möägelik is dat der völle meyr biseksuelen sint, vöäral by jungeren dee öäre identiteit noch kennenleyren müt.
+== Weatenskappelike undersöken, teorien en reaktys uut de ümgeaving ==
+Weatenskappers  hebbet verskillende ideen en teorien oaver hoo as et kümt dat ymand biseksueel is. Völle sint et der oaver eyns dat biseksuelen et al weatet as see behöyrlik jung sint. Ouk al kan et good weasen dat see et up dat ougenblik nog nich herkennet as biseksualiteit. Mangs kan et sou weasen dat eyne sik al jårenlang biseksueel gedrägt, mår et pas nå al dee jåren herkent of togeavt.
 
-== Veurkömn ==
-n Önnerzook van t Laandlik Netwark Biseksualiteit (2007) biej 50.000 mensken hef loatn zeen det dr verskiln zeent tusken biseksueel gedrag en biseksuele identiteit. Van de heteroseksuele männe zea 5,5% an biseksueel gedrag te doon, van de homoseksuele männe was det 7.5%. Biej de vrouwleu was det van de heteroseksueeln 5,2% en 13,5%. Moar umdet Neerlaand völle mear inwonners hef as det, kö'w zegn det t heal good kan det dr völle mear mensken zeent dee biseksueel zeent, veural biej jongern dee öare identiteit nog kenn learn mut.
-
-== Wetnskoplike onnerzeukn, theoriejn en sosjale reaksies ==
-Wetnskoppers hebt verskilnde ideejn en theoriejn oawer hoo't kump det iemaand biseksueel is, moar völle zeent dr oawer eens det biseksueeln t al wett as zee beheurlik joonk zeent, ok al kan t zoo wean det zee op det moment t nog nich herkent as biseksualiteit. Mangs kan t zo wean det iemaand zik al joarnlang biseksueel gedreg, moar t pas noa al dee joarn herkent of toogef det t innerdaad biseksualiteit is.
-
-Hieronner he'j nen greep oet de theoriejn en önnerzeukn.
-
-=== Sosjale faktoorn ===
-Krafft-Ebing was n earsten dee zee det biseksualiteit de earste natuurlike richtige van seksualiteit is, net zoo as [[Freud]] zea. Zee veundn det mensken as earste biseksueel zeent, en pas later, önner invlood van sosjale faktoorn, olders, familie, vreendn of politike beweagreadnen dr veur kiest um heteroseksueel öf homoseksueel te wean.
-
-[[Kategorie:Tweants artikel]]
-[[Kategorie:Seksuele erichtheaid]]
+=== Sociale faktoren ===
+Krafft-Ebing was den eyrsten wat seade dat biseksualiteit de eyrste natuurlike richting van seksualiteit is, wat [[Sigmund Freud|Freud]] ouk al bewäärden. See vünden dat lüde eyrst biseksueel sint, as ne ård neutrale posity. Pas later, under invlood van sociale faktoren, olders, family, vreanden of politike beweagreadenen keset se der vöär üm heteroseksueel of homoseksueel te weasen.
+[[Kategorie:Twents artikel]]
+[[Kategorie:Seksuele gerichtheid]]
