*Empty MediaWiki Message*

--- a/Biseksualiteit.mw
+++ b/Biseksualiteit.mw
@@ -1,6 +1,6 @@
-[[Bestand:Sexual scene on pompeian mural 2.jpg|thumb|Biseksualiteit]]
-[[Bestand:The_bisexual_pride_flag_(3673713584).jpg|thumb|right|Vlagge dee vöär de biseskualiteit steyt.]]
-[[Bestand:Japanesepederasty18thcentury.jpg|thumb|right|Ne Japanse ofbeelding van twea männe en ne vraaw dee [[seks]] hebbet.]]
+[[Bestaand:Sexual scene on pompeian mural 2.jpg|thumb|Biseksualiteit]]
+[[Bestaand:The_bisexual_pride_flag_(3673713584).jpg|thumb|right|Vlagge dee vöär de biseskualiteit steyt.]]
+[[Bestaand:Japanesepederasty18thcentury.jpg|thumb|right|Ne Japanse ofbeelding van twea männe en ne vraaw dee [[seks]] hebbet.]]
 '''Biseksualiteit''' is ne ård [[seksuele gerichtheid]] wårby nen persoon beide når [[man (geslacht)|männe]] en [[vraauw|vrouwlüde]] kik, emotioneel en/of seksueel. Et is med [[heteroseksualiteit|heteroseksualiteit]] en [[homoseksualiteit|homoseksualiteit]] eyne van de dree höyvdförme van seksuele vöärköär. Biseksualiteit is nich heylemål etsölvde as [[panseksualiteit|panseksualiteit]]. By panseksualiteit maakt et ja niks uut by wat vöär [[geslachtsidentiteit|geslachtsidentiteit]] eyne sik by reakent. By biseskualiteit is en persoon in et geheyl richt up männe en vrouwlüde alleen. Ouk mensken dee nich heylemål sou drök doot oaver öaren seksuelen ård künnet siksölv as biseksueel kenmarken. Mensken dee as heylemål niks vöölt by gin enkel geslacht sint [[aseksueel]].
 
 Biseksualiteit kümt vöär oaver de heyle wearld in verskillende kulturen, en ouk by deers kün y et antreffen. Et hevt der aait al weasd. De term ''biseksualiteit'' köm net as de termen ''heteroseksualiteit'' en ''homoseksualiteit'' pas in et 19. jårhunderd in engelsk-sprekkende landen in gebruuk, en pas argens halv in et 20. jårhunderd in [[Neaderland]].
