*Empty MediaWiki Message*

--- a/Biseksualiteit.mw
+++ b/Biseksualiteit.mw
@@ -1,13 +1,13 @@
 [[Bestaand:Sexual scene on pompeian mural 2.jpg|thumb|Biseksualiteit]]
 [[Bestaand:The_bisexual_pride_flag_(3673713584).jpg|thumb|right|Vlagge dee vöär de biseskualiteit steyt.]]
 [[Bestaand:Japanesepederasty18thcentury.jpg|thumb|right|Ne Japanse afbeelding van twey männe en ne vrouwe dee [[seks]] hebbet.]]
-'''Biseksualiteit''' is ne ård [[seksuele gerichtheid]] wårby nen persoon beide når [[man (geslacht)|männe]] en [[vraauw|vrouwlüde]] kikt, emotioneel en/of seksueel. Et is med [[heteroseksualiteit|heteroseksualiteit]] en [[homoseksualiteit|homoseksualiteit]] eyne van de dree höyvdförme van seksuele vöärköär. Biseksualiteit is nich heylemål etsölvde as [[panseksualiteit|panseksualiteit]]. By panseksualiteit maakt et ja niks uut by wat vöär [[geslachtsidentiteit|geslachtsidentiteit]] eyne sik by reakent. By biseskualiteit is en persoon in et geheyl richt up männe en vrouwlüde alleen. Ouk mensken dee nich heylemål sou drök doot oaver öaren seksuelen ård künnet siksölv as biseksueel kenmarken. Mensken dee as heylemål niks vöölt by gin enkel geslacht sint [[aseksueel]].
+'''Biseksualiteit''' is ne ård [[seksuele gerichtheid]] wårby nen persoon beide når [[man (geslacht)|männe]] en [[vraauw|vrouwlüde]] kikt, emotioneel en/of seksueel. Et is med [[heteroseksualiteit|heteroseksualiteit]] en [[homoseksualiteit|homoseksualiteit]] eyne van de dree höyvdförme van seksuele vöärköär. Biseksualiteit is nich heylemål etsölvde as [[panseksualiteit|panseksualiteit]]. By panseksualiteit maakt et ja niks uut by wat vöär [[geslachtsidentiteit|geslachtsidentiteit]] eyne sik by reakent. By biseskualiteit is en persoon in et geheyl richt up männe en vrouwlüde alleane. Ouk lüde dee nich heylemål sou drök doot oaver öaren seksuelen ård künnet siksölv as biseksueel kenmarken. Lüde dee as heylemål niks vöölt by gin enkel geslacht sint [[aseksueel]].
 
 Biseksualiteit kümt vöär oaver de heyle wearld in verskillende kulturen, en ouk by deers kün y et antreffen. Et hevt der aait al weasd. De term ''biseksualiteit'' köm net as de termen ''heteroseksualiteit'' en ''homoseksualiteit'' pas in et 19. jårhunderd in engelsk-sprekkende landen in gebruuk, en pas argens halv in et 20. jårhunderd in [[Neaderland]].
 
 == Umskryving ==
 === Seksuele gerichtheid, identiteit, gedrag ===
-Biseksuelen künnet leevdesgevölens en seksuele gevölens hebben vöär beide geslachten, man en vrouwe. Mensken vallet düs nich enkel up männe of vrouwlüde; der is ouk noch en gebeed tüskenin. Dårbinnen sint verskillende gråden wårin eyne körter by homoseksualiteit of körter by heteroseksualiteit steyt. Wyder kan et ouk sou weasen dat eyne sik wal seksueel antrökken vöölt up et sölvde geslacht, mår syne identiteit toch up heteroseksueel höldt. Ouk künnet lüde homoseksuele ervåringen hebben, mår siksölv nich as homeseksueel of biseksueel seen. Ouk kan et sou weasen dat nen homoseksueel seks hevt med eyne van et andere geslacht mår siksölv nich as biseksueel süt.
+Biseksuelen künnet leevdesgevölens en seksuele gevölens hebben vöär beide geslachten, man en vrouwe. Lüde vallet düs nich enkel up männe of vrouwlüde; der is ouk noch en gebeed tüskenin. Dårbinnen sint verskillende gråden wårin eyne körter by homoseksualiteit of körter by heteroseksualiteit steyt. Wyder kan et ouk sou weasen dat eyne sik wal seksueel antrökken vöölt up et sölvde geslacht, mår syne identiteit toch up heteroseksueel höldt. Ouk künnet lüde homoseksuele ervåringen hebben, mår siksölv nich as homeseksueel of biseksueel seen. Ouk kan et sou weasen dat nen homoseksueel seks hevt med eyne van et andere geslacht mår siksölv nich as biseksueel süt.
 === Meaningen oaver et bestån der van ===
 Net sou as andere "råre" seksualiteiten kan biseksualiteit diskrimineerd wörden, al kümt dat in [[Verienigde Staoten van Amerika|Amerika]] vaker vöär as in [[Neaderland]]. Der sint årdig wat lüde dee meynet dat et [[bifobie|verskynsel biseksualiteit nich besteyt]]. dat idee kümt van de gedachte dat lüde enkel mår op lüde van et andere geslacht [[verleevdheid|verleevd]] künnet worden, of dat der alleane heteroseksualiteit en homoseksualiteit besteyt, mår nich wat der tüskenin. Dee lüde meynet dat en term biseksualiteit gebruukt wörd döär biseksuelen as vöärwendsel üm homoseksualiteit te verbergen, döär heteroseksuelen dee seks med et sölvde geslacht uutproberen willet, of dat eyne alleane biseksueel is as den sik töt beide geslachten in deselvde måte antrökken vöölt.
 
