Verwysing nå döärverwyssyde repareerd ([[Engelaand]] nå [[Engelaand (regio)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Sticklepath.mw
+++ b/Sticklepath.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Finch Foundry, Sticklepath - geograph.org.uk - 1985.jpg|300px|thumb|right|Flinch Foundry in Sticklepath.]]
-'''Sticklepath''' is n [[dorp|dörpskn]] en [[civil parish]] in [[Dartmoor]] in [[Devon]], [[Engelaand|Englaand]].
+'''Sticklepath''' is n [[dorp|dörpskn]] en [[civil parish]] in [[Dartmoor]] in [[Devon]], [[Engelaand (regio)|Englaand]].
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Plaots in Dartmoor]]
