Verwysing nå döärverwyssyde repareerd ([[Engelaand]] nå [[Engelaand (regio)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Bellever.mw
+++ b/Bellever.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding:RiverEastDart.jpg|300px|thumb|right|n East Dart biej Bellever.]]
-'''Bellever''' is n [[noaberskop]] in [[Dartmoor]] in [[Devon]], [[Engelaand|Englaand]]. t Leg an n [[East Dart River]] önnevear twea kilometer ten zuudn van [[Postbridge]].
+[[Ofbeelding:RiverEastDart.jpg|300px|thumb|n East Dart biej Bellever.]]
+'''Bellever''' is n [[noaberskop]] in [[Dartmoor]] in [[Devon]], [[Engelaand (regio)|Englaand]]. t Leg an n [[East Dart River]] önnevear twea kilometer ten zuudn van [[Postbridge]].
 
 t Wörn veur n earstn kear nöamd in t [[Hertogdom Cornwall]] in [[1355]] woarin n noam van de boerderieje ''Welford'' steet, ne kombinoasie van ''wielle'' ([[kwel|kwelle]]) en ''ford'' ([[voorde]]). In zin book ''High Dartmoor'' ([[1983]]) steln Erich Hemery veur det n noam van ''bal'' (mien) en ''ford'' kömp, dus dan zö't ''mien biej de voorde'' beteknn.
 
