Verwysing nå döärverwyssyde repareerd ([[Ierlaand]] nå [[Ierlaand (laand)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Halloween.mw
+++ b/Halloween.mw
@@ -1,4 +1,4 @@
-'''Halloween''' is een feestdag up 31 oktober, dat in [[Ierlaand|Yrland]], [[Engelaand|Engeland]], [[Verienigde Staoten van Amerika|Amerika]] en [[Canada|Kanada]] evyrd wördt. De lätste jåren kümt et sachtys an ouk up Neaderland en Belgie an. Up disse åvend gåt kinder, verkleyd as heksen, monsters en douden, langes de döären ümme snööp te skoaien. Et feest hevt syn lykenisse en ouk desülvde oorsprung med [[Samhain]], [[Allerheiligen]], [[Allerzielen|Allerselen]] en [[Sunte-Marten (feest)|Sünte-Määrten]]. De douden wördet der vanolds med eyrd.
+'''Halloween''' is een feestdag up 31 oktober, dat in [[Ierlaand (laand)|Yrland]], [[Engelaand|Engeland]], [[Verienigde Staoten van Amerika|Amerika]] en [[Canada|Kanada]] evyrd wördt. De lätste jåren kümt et sachtys an ouk up Neaderland en Belgie an. Up disse åvend gåt kinder, verkleyd as heksen, monsters en douden, langes de döären ümme snööp te skoaien. Et feest hevt syn lykenisse en ouk desülvde oorsprung med [[Samhain]], [[Allerheiligen]], [[Allerzielen|Allerselen]] en [[Sunte-Marten (feest)|Sünte-Määrten]]. De douden wördet der vanolds med eyrd.
 
 ==Geskydenisse==
 ===Dunkere middeleywen===
