Verwysing nå döärverwyssyde repareerd ([[Engelaand]] nå [[Engelaand (regio)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Brexit.mw
+++ b/Brexit.mw
@@ -9,7 +9,7 @@ t Britse EU-lidmaotskop het lange tied n kontroversieel onderwarp west in t Veri
 n Eerdere volksraodpleging over t Britse lidmaotskop van n verienigd Europa vun plaetse in 1975. n Meerderhied van t Britse volk steunde de vortzetting van t lidmaotskop van t Verienigd Keuninkriek van de [[Europese Ekonomiese Gemienskop]] (EEG), n veurganger van de EU.<ref>[http://www.historyandpolicy.org/policy-papers/papers/the-case-for-brexit-lessons-from-1960s-and-1970s The case for Brexit: lessons from the 1960s and 1970s], Adrian Williamson, ''History and Policy'', 2015</ref>
 
 == Uutslag van de volksraodpleging ==
-In de ochtend nao de volksraodpleging bleek t brexit-kamp wunnen te hebben mit n meerderhied van 51,9 %.<ref>[http://nos.nl/artikel/2113163-alle-stemmen-zijn-geteld-52-procent-stemt-voor-brexit.html Alle stemmen bin teld: 52 persent stemt veur brexit]</ref> Opvalend bi'j disse uutslag is t verskil tussen [[Engelaand]] en [[Kumrië]], waor telkens n meerderhied van ongeveer 53% veur de Brexit keus en [[Schotlaand|Skotlaand]] en [[Noord-Ierlaand]] waor t "remain"-kamp n dudelike meerderhied behaelde (in Skotlaand zels in alle kiesdistrikten). De opkomst was 72,2%.
+In de ochtend nao de volksraodpleging bleek t brexit-kamp wunnen te hebben mit n meerderhied van 51,9 %.<ref>[http://nos.nl/artikel/2113163-alle-stemmen-zijn-geteld-52-procent-stemt-voor-brexit.html Alle stemmen bin teld: 52 persent stemt veur brexit]</ref> Opvalend bi'j disse uutslag is t verskil tussen [[Engelaand (regio)|Engelaand]] en [[Kumrië]], waor telkens n meerderhied van ongeveer 53% veur de Brexit keus en [[Schotlaand|Skotlaand]] en [[Noord-Ierlaand]] waor t "remain"-kamp n dudelike meerderhied behaelde (in Skotlaand zels in alle kiesdistrikten). De opkomst was 72,2%.
 
 Deurdat de premier [[David Cameron]] veur de <nowiki>''remain''</nowiki>-groep kampanje voerd het is zien posisie wankel worden en het hi'j de ochtend naodat de uutslag definitief bekend maekt was, zegd dat hi'j zal oftreden omdat hi'j himzels niet meer in staot vient om t laand nog te leiden.<ref>[http://www.nu.nl/brexit/4282662/premier-cameron-kondigt-aftreden-uitslag-eu-referendum.html ''Premier Cameron kondigt oftreden an nao uutslag EU-volksraodpleging''], nu.nl <small>2016-06-25</small></ref>
 
