Verwysing nå döärverwyssyde repareerd ([[Engelaand]] nå [[Engelaand (regio)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Woodhenge_van_Zwolle.mw
+++ b/Woodhenge_van_Zwolle.mw
@@ -1,6 +1,6 @@
 De '''Woodhenge van Zwolle''' was een nederzettinge uut de [[Bronstied]] die evunnen is op 21 april [[1990]]<ref>Trouw, 23 september 1993. https://www.trouw.nl/nieuws/stonehenge-ontdekt-in-zwolle~b141fd78/</ref>. De oaverbliefsels van disse nederzettings bint evunnen in die [[Zwolle|Zwolse]] wiek [[Ittersumerbroek]]. Er leavden zo'n tien töt twintig meansen per ginneraosie. De huzen lagen in kleine gruupies kortbi'j mekare of wieder uut mekare. De [[boeren]] die hier leavden, leavden van de akkerbouw en veeteelt, määr de jacht op dieren en de visvangst was niet onbelangrieke<ref>Van et boek Zwollerkerspel deur Wim Coster (2017).</ref>.
 
-Uut verkleurings in de grond was of te leiden dät er hier vrogger paalkulen en ofvalkulen waren. Ook bint er onder aandere boederi'jen evunnen met bi'jgebouwen. Een antal van de paalkulen kunt meugelik onderdiel ewest wean van twie cirkels. De deursnede van disse twie cirkels bedrög ongeveer tien meter en zie bint volgens dezelfde principes ebouwd. De twie cirkels liekt op [[Stonehenge]]. Tiedens de [[Midden-Bronstied]] waren er contacten met [[Engelaand]], wat de geliekenisse kan verklaoren. De cirkels kunt meugelik kalenders ewest wean die belangrieke waren veur de landbouw ([[zunnewende]]s). Ook bint er resten evunnen uut et [[Neolithicum]], nämelik pielspietsies van bewärkt [[vuurstien]].
+Uut verkleurings in de grond was of te leiden dät er hier vrogger paalkulen en ofvalkulen waren. Ook bint er onder aandere boederi'jen evunnen met bi'jgebouwen. Een antal van de paalkulen kunt meugelik onderdiel ewest wean van twie cirkels. De deursnede van disse twie cirkels bedrög ongeveer tien meter en zie bint volgens dezelfde principes ebouwd. De twie cirkels liekt op [[Stonehenge]]. Tiedens de [[Midden-Bronstied]] waren er contacten met [[Engelaand (regio)|Engelaand]], wat de geliekenisse kan verklaoren. De cirkels kunt meugelik kalenders ewest wean die belangrieke waren veur de landbouw ([[zunnewende]]s). Ook bint er resten evunnen uut et [[Neolithicum]], nämelik pielspietsies van bewärkt [[vuurstien]].
 
 Zo'n 2500 jaor eleden bint de leste bewoners vot egaon op zuuk naor heuger elegen zaandruggen deur meer activiteit van de [[Iessel]].
 
