Verwysing nå döärverwyssyde repareerd ([[Engelaand]] nå [[Engelaand (olde könninkriek)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Volleybal.mw
+++ b/Volleybal.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Red_dragons_kwalificeren_zich_tegen_grieken_voor_ek.jpg|thumb|right|300px|Actie bie et volleybal]]
+[[Ofbeelding:Red dragons kwalificeren zich tegen grieken voor ek.jpg|thumb|300px|Actie bie et volleybal]]
 '''Volleybal''' is nen [[balsport]] woerbie as een spölveeld van 9 bie 18 meter opdeeld is in twee lieke helften met een net der tusken. Op iedere helfte steet een manskap van 6 spöllers. Disse mut proberen nen bal oawer et net, tusken twee rechtopstoande stökke duur, bie den tegenstaander binnen de lienen van et veeld vuur de groond te kriegen. As det lukket of as den tegenstaander nen fout maakt, krig et manskap wat opslöt nen peunt. Wee as der as eerste 25 peunten hef, wint nen ''set''. Bie dree sets wint et manskap den wedstried. Bie nen gelieken staand (2-2) in sets, doert nen wedstried een extra set länger. Hierin zeent mer 15 peunten te verdenen. Tiedens dissen beslissenden set wesselt de teams van spölkaante noa de eerste 8 peunten.
 
 Duur de joaren zeent der een antal soorten volleybal ontstoan: zitvolleybal, minivolleybal en straandvolleybal.
@@ -22,7 +22,7 @@ Et spölveeld mut ne oppervlakte van 9 bie 18 meter hebben.
 *Een manskap mag ginnen anval opzetten as den ''libero'' (verdeadigingsspesjalist) nen boawenhaandsen ''pass'' gef in et dreemetergebeed.
 
 ==Verleden==
-An et [[Engelaand|Engelse]] hof van de doomoalige keuniginne [[Elizabeth]] wör in et [[16e eeuw|16de joarhoonderd]] al iets espöld wat op volleybal leek. Det blik oet [[Tekenen|tekeninge]] oet dee tied. Offisjeel geeldt den [[Verenigde Stoaten|Amerikaan]] [[William G. Morgan]] as oetdeanker van et spel. As sportleader bie de [[Young Men Christian Association]] (YMCA) in [[Massachusetts]] gavven hee oonder mear les an een koppel euldere zakenleu. In dee tied besteund [[basketbal]] al, mer det veund hee te hard vuur disse leu. Doarumme dachten hee in [[1895]] een aander spel oet.
+An et [[Engelaand (olde könninkriek)|Engelse]] hof van de doomoalige keuniginne [[Elizabeth]] wör in et [[16e eeuw|16de joarhoonderd]] al iets espöld wat op volleybal leek. Det blik oet [[Tekenen|tekeninge]] oet dee tied. Offisjeel geeldt den [[Verenigde Stoaten|Amerikaan]] [[William G. Morgan]] as oetdeanker van et spel. As sportleader bie de [[Young Men Christian Association]] (YMCA) in [[Massachusetts]] gavven hee oonder mear les an een koppel euldere zakenleu. In dee tied besteund [[basketbal]] al, mer det veund hee te hard vuur disse leu. Doarumme dachten hee in [[1895]] een aander spel oet.
 
 Hee nöm regels oet et [[tennis]], [[basketbal]] en [[honkbal]] en maakten doarmet de volleybalregels. Den bal mos zoonder an de groond te kommen oawer et net espöld worden. Et roondspöllen neumden hee ''volley''. Een ''netservice'' meug een moal oawer edoan worden en töt een meter vuur et net meug den spöller dribbelen met den bal (ne vuur oezelf umhoge spöllen). Um de vingers van de vrouwleu te beskoarmen, meugen zee den bal eerst opvangen en dan wier opsmieten. Nen wedstried har meardere innings (spölroondes). Nen inning was vuurbie as alle spöllers van beaide manskappen ne opslagbuurte had harren. Et spel was één tegen ene te spöllen, mer ook tiene tegen tiene.  
 
